--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <section class="banner">
-        <img src="media/fondo.gif" alt="" class="banner__img desenfoque">
+        <img src="Media/fondo.gif" alt="" class="banner__img desenfoque">
         <div class="banner__content"><span id = "hard"></span></div>
     </section>
 
@@ -82,42 +82,42 @@
             <h2 class="group__title" id="temas">Temas </h2>
             <div class="container container--flex">
                 <div class="column column--50-25">
-                    <img src="media/img1.jpg" alt="" class="today-special__img">
+                    <img src="Media/img1.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Arquitecturas</div>
                     <div class="today-special__price"><a href="files/Arquitectura.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/img2.jpg" alt="" class="today-special__img">
+                    <img src="Media/img2.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Perifericos </div>
                     <div class="today-special__price"><a href="files/Perifericos.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/img3.jpg" alt="" class="today-special__img">
+                    <img src="Media/img3.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Memorias</div>
                     <div class="today-special__price"><a href="files/Memoria.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/img4.jpg" alt="" class="today-special__img">
+                    <img src="Media/img4.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Modos Direcc.</div>
                     <div class="today-special__price"><a href="files/Modos.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/arqui3.jpg" alt="" class="today-special__img">
+                    <img src="Media/arqui3.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Procesadores</div>
                     <div class="today-special__price"><a href="files/CPU.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/arqui.jpg" alt="" class="today-special__img">
+                    <img src="Media/arqui.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Aplicaciones</div>
                     <div class="today-special__price"><a href="files/Aplicaciones.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/arqui2.jpg" alt="" class="today-special__img">
+                    <img src="Media/arqui2.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Ambientes de Serv.</div>
                     <div class="today-special__price"><a href="files/Ambientes.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="media/arqui4.jpg" alt="" class="today-special__img">
+                    <img src="Media/arqui4.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Buses</div>
                     <div class="today-special__price"><a href="files/Buses.pdf" class="link-pdf" target="_blank">ver PDF</a></div>
                 </div>
