--- a/Practicas.html
+++ b/Practicas.html
@@ -50,7 +50,7 @@
     </nav>
 
     <section class="banner">
-        <img src="media/practica.jpg" alt="" class="banner__img">
+        <img src="Media/practica.jpg" alt="" class="banner__img">
         <div class="banner__content">Prácticas </div>
     </section>
 
