--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <section class="banner">
-        <img src="Media/fondo.gif" alt="" class="banner__img desenfoque">
+        <img src="Media\fondo.gif" alt="" class="banner__img desenfoque">
         <div class="banner__content"><span id = "hard"></span></div>
     </section>
 
