--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
     </nav>
 
     <section class="banner">
-        <img src="media\img2.jpg" alt="" class="banner__img">
+        <img src="Media/img2.jpg" alt="" class="banner__img">
         <div class="banner__content"><span id="contact"></span> </div>
     </section>
 
